register and auth finish