@@ -1,6 +1,6 @@
 package com.example.demo.controller;
 
-import com.example.demo.check.LoginCheckService;
+import com.example.demo.service.LoginCheckService;
 import com.example.demo.model.User;
 import jakarta.servlet.http.HttpSession;
 import org.springframework.stereotype.Controller;
@@ -21,11 +21,13 @@ public class AuthController {
 
     @GetMapping("/login")
     public String login(HttpSession session, Model model) {
-        model.addAttribute("login", session.getAttribute("login"));
+        if (session.getAttribute("login") != null) {
+            return "redirect:/user";
+        }
+        
         model.addAttribute("user", new User());
         return "login";
     }
-
 
     @PostMapping("/check/login")
     public String checkLogin(@RequestParam(required = false) String login,
@@ -33,9 +35,7 @@ public class AuthController {
                              RedirectAttributes redirectAttributes,
                              HttpSession session) {
 
-        System.out.println("DEBUG login=" + login + " passwordPresent=" + (password != null));
-
-        if (login == null || password == null || login.isBlank() || password.isBlank()) {
+        if (login == null || password == null || login.trim().isEmpty() || password.isEmpty()) {
             redirectAttributes.addFlashAttribute("error", "Заполните логин и пароль");
             return "redirect:/login";
         }
@@ -52,10 +52,18 @@ public class AuthController {
             return "redirect:/login";
         }
 
-        User user = userOpt.get();
-        session.setAttribute("login", user.getLogin());
-        session.setAttribute("userId", user.getId());
+        User authenticatedUser = userOpt.get();
+        session.setAttribute("login", authenticatedUser.getLogin());
+        session.setAttribute("userId", authenticatedUser.getId());
 
+        redirectAttributes.addFlashAttribute("message", "Добро пожаловать, " + (authenticatedUser.getName() != null && !authenticatedUser.getName().isEmpty() ? authenticatedUser.getName() : authenticatedUser.getLogin()) + "!");
         return "redirect:/user";
+    }
+
+    @GetMapping("/logout")
+    public String logout(HttpSession session, RedirectAttributes redirectAttributes) {
+        session.invalidate();
+        redirectAttributes.addFlashAttribute("message", "Вы успешно вышли из системы");
+        return "redirect:/login";
     }
 }
